--- a/ruoyi-admin/pom.xml
+++ b/ruoyi-admin/pom.xml
@@ -71,6 +71,12 @@
             <artifactId>google-oauth-client</artifactId>
             <version>1.34.1</version>
         </dependency>
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>com.google.http-client</groupId>
             <artifactId>google-http-client-jackson2</artifactId>
