--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -123,6 +123,7 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
+            <version>4.11.0</version>  <!-- 使用一个稳定版本 -->
         </dependency>
 
         <!--<dependency>
